--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="title">Simmy's YouTube Channel Survey Form</h1>
-    <p id="description">Thank you for taking the time to help me improve my YouTbe channel ଘ(੭ˊᵕˋ)੭</p>
+    <p id="description">Thank you for taking the time to help me improve my YouTube channel ଘ(੭ˊᵕˋ)੭</p>
     <form id="survey-form">
         <label for="name" id="name-label">Name</label>
         <input type="text" id="name" placeholder="Enter your name">
@@ -20,30 +20,40 @@
         <label for="age" id="number-label">Age</label>
         <input type="number" id="number" placeholder="Age" min="1" max="170" required>
 
-        <label for="dropdown">Which option best describes your current role?</label>
-        <select name="dropdown" id="dropdown">
-            Select current role
-            <option>Student</option>
-            <option>Employed</option>
-            <option>Self-Employed</option>
-            <option>Unemployed</option>
-            <option>Retired</option>
+        <label for="options" class="p-bg">Which option best describes your current role?</label>
+        <select name="options" id="dropdown">
+            <option value="" disabled selected>Select current role</option>
+            <option value="student">Student</option>
+            <option value="employed">Employed</option>
+            <option value="self-employed">Self-Employed</option>
+            <option value="unemployed">Unemployed</option>
+            <option value="retired">Retired</option>
         </select>
 
-        <label for="radio">Would you recommend Simmy's YouTube Channel to a friend?</label>
-        <input type="radio" id="yes" value="Yes" name="radio">
-        <input type="radio" id="maybe" value="Maybe" name="radio">
-        <input type="radio" id="no" value="No" name="radio">
-
-        <label for="checkbox">What would you like to see improved? (Check all that apply)</label>
-        <input type="checkbox" name="checkbox" id="visuals" value="improvements">Visuals and Editing Techniques
-        <input type="checkbox" name="checkbox" id="story" value="improvements">Storyboard and Planning
-        <input type="checkbox" name="checkbox" id="substance" value="improvements">Substance/Content
-
-        <label for="textarea">Any comments or suggestions?</label>
+        <p class="p-bg">Would you recommend Simmy's YouTube Channel to a friend?</p>
+        <div id="radio">
+            <input type="radio" id="yes" value="Yes" name="recommend">
+            <label for="yes">Yes</label>
+            <input type="radio" id="maybe" value="Maybe" name="recommend">
+            <label for="maybe">Maybe</label>
+            <input type="radio" id="no" value="No" name="recommend">
+            <label for="no">No</label>
+        </div>
+        
+        <div id="checkbox">
+            <p class="p-bg">What would you like to see improved? (Check all that apply)</p>
+            <input type="checkbox" name="checkbox" id="visuals" value="improvements">
+            <label for="visuals">Visuals and Editing Techniques</label>
+            <input type="checkbox" name="checkbox" id="story" value="improvements">
+            <label for="story">Storyboard and Planning</label>
+            <input type="checkbox" name="checkbox" id="substance" value="improvements">
+            <label for="substance">Substance/Content</label>
+        </div>
+        
+        <label for="textarea" class="p-bg">Any comments or suggestions?</label>
         <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Enter your comment here..."></textarea>
 
-        <input type="button" id="submit" value="Submit">
+        <button id="submit">Submit</button>
 
     </form>
 </body>
