--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p id="description">Thank you for taking the time to help me improve my YouTube channel ଘ(੭ˊᵕˋ)੭</p>
     <form id="survey-form">
         <label for="name" id="name-label">Name</label>
-        <input type="text" id="name" placeholder="Enter your name">
+        <input type="text" id="name" placeholder="Enter your name" required>
 
         <label for="email" id="email-label">Email</label>
         <input type="email" id="email" placeholder="Enter your email" required>
